--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
             text-align: center;
             padding-top: 50px;
             overflow: hidden;
+            margin: 0;
+            padding: 20px;
         }
 
         h1 {
-            font-size: 120px;
+            font-size: 8vw; /* Responsive font size */
             color: red;
-            text-shadow: 4px 4px 20px red;
-            animation: glitch 0.5s infinite alternate;
+            text-shadow: 2px 2px 10px red;
+            animation: glitch 0.8s infinite alternate;
+            margin: 10px 0;
         }
 
         @keyframes glitch {
@@ -30,15 +33,17 @@
         }
 
         #hacker-mask {
-            width: 200px;
+            width: 50vw; /* Make it responsive */
+            max-width: 200px; /* Prevent it from being too big */
             opacity: 0.8;
             margin-top: 20px;
             animation: fadeIn 2s forwards;
         }
 
         #warning {
-            font-size: 22px;
-            margin-top: 20px;
+            font-size: 4vw; /* Adjust font size for smaller screens */
+            max-width: 90%;
+            margin: 20px auto;
             opacity: 0;
             animation: fadeIn 2s forwards 2s;
         }
@@ -48,7 +53,7 @@
         }
 
         #message {
-            font-size: 20px;
+            font-size: 4vw;
             color: red;
             white-space: nowrap;
             overflow: hidden;
@@ -71,6 +76,7 @@
 </head>
 <body>
     <h1>YOU HAVE BEEN HACKED</h1>
+    <img id="hacker-mask" src="https://i.imgur.com/1J3rOqX.png" alt="Anonymous Hacker Mask">
     <p id="warning">You shouldn't scan every QR code you see and give out information easily.</p>
     <p id="message"></p>
 
@@ -84,8 +90,7 @@
                 setTimeout(typeWriter, 100);
             }
         }
-        setTimeout(typeWriter, 4000); // Starts after 4 seconds to ensure proper timing
+        setTimeout(typeWriter, 4000); // Starts after 4 seconds
     </script>
-	<img id="hacker-mask" src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExOHl3amx2Y3huN2kwbzdnNDF0czB5cWs0b2gwbG96d3NjNnZwcjdidSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/jmS6emKfUZXbO88P00/giphy.gif" alt="Anonymous Hacker Mask">
 </body>
 </html>
