--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </head>
 <body>
     <h1>YOU HAVE BEEN HACKED</h1>
-    <img id="hacker-mask" src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExOHl3amx2Y3huN2kwbzdnNDF0czB5cWs0b2gwbG96d3NjNnZwcjdidSZlcD12MV9pbnRlcm5naWZfYnlfaWQmY3Q9Zw/jmS6emKfUZXbO88P00/giphy.gif" alt="Anonymous Hacker Mask">
+    <img id="hacker-mask" src="GIF.gif" alt="Anonymous Hacker Mask">
     <p id="warning">You shouldn't scan every QR code you see and give out information easily.</p>
     <p id="message"></p>
 
