--- a/index.html
+++ b/index.html
@@ -79,11 +79,10 @@
 <body>
     <h1>YOU HAVE BEEN HACKED</h1>
     <img id="hacker-mask" src="GIF.gif" alt="Anonymous Hacker Mask">
-    <p id="warning">You shouldn't scan every QR code you see and give out information easily.</p>
     <p id="message"></p>
 
     <script>
-        let message = "Your security is weak! Change your passwords now.";
+        let message = "You shouldn't scan every QR code you see and give out information easily.";
         let i = 0;
         function typeWriter() {
             if (i < message.length) {
