--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 <body>
     <h1>YOU HAVE BEEN HACKED</h1>
     <img id="hacker-mask" src="GIF.gif" alt="Anonymous Hacker Mask">
+    <p id="warning">You shouldn't scan every QR code you see and give out information easily.</p>
     <p id="message"></p>
 
     <script>
