--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <p id="message"></p>
 
     <script>
-        let message = "You shouldn't scan every QR code you see and give out information easily.";
+        let message = "Your security is weak! Change your passwords now.";
         let i = 0;
         function typeWriter() {
             if (i < message.length) {
